tests/integration/snapshots/integration__conformance__n_structure_lone-invalid-utf-8.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [229]
stdout ---

stderr ---
error: unfinished multi-byte sequence
 --> stdin:1:1
  |
1 | �
  | ^
